# todo-cli

./: .gitignore  Cargo.toml  Makefile
.github/ISSUE_TEMPLATE/: test.md
docs/: specifications.md
src/: cli.rs  daemon.rs  db.rs  export.rs  import.rs  main.rs  tui.rs
