[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.9"
notify-rust = "4.8"
chrono = { version = "0.4", features = ["serde"] }
daemonize = "0.5"
tokio = { version = "1.35", features = ["full"] }
directories = "5.0"
libc = "0.2"
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3.8"
